[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = "Flask tutorial"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
blinker = "^1.5"
watchdog = "^2.1.9"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.4"
flask-sqlalchemy = "^3.0.2"
Flask-Moment = "^1.0.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
